# chinese-chess

./: CLAUDE.md  README.md  app.py  main.py  pyproject.toml
src/chinese_chess/: __init__.py  board.py  pieces.py  solver.py
tests/: test_solver.py
