[project]
name = "chinese-chess"
version = "0.1.0"
description = "Chinese Chess (Cờ Tướng) puzzle solver - giải cờ thế"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "colorama>=0.4.6",
    "loguru>=0.7.0",
    "numpy>=2.4.2",
    "streamlit>=1.40.0",
    "streamlit-drawable-canvas>=0.9.3",
]

[tool.uv]
package = false

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "pytest>=9.0.2",
    "ruff>=0.15.2",
]

[project.scripts]
solve = "main:main"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
